--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
 }
 h1 {
-  font-weight: lighter;
+  font-weight: bold;
   font-size: 40px;
   letter-spacing: 2px;
   margin-bottom: 0px;
@@ -24,5 +24,9 @@ input{
   margin-top: 10px;
 }
 .addOption{
+  background-color: yellow;
   margin-top: 10px;
+}
+button{
+  background-color: yellow;
 }
