--- a/main.css
+++ b/main.css
@@ -27,6 +27,10 @@ input{
   background-color: yellow;
   margin-top: 10px;
 }
-button{
-  background-color: yellow;
+.resultSection{
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
 }
